--- a/views/partials/head.hbs
+++ b/views/partials/head.hbs
@@ -5,4 +5,5 @@
     <link rel="stylesheet" href="/css/album.css">
     <link rel="stylesheet" href="/css/product.css">
     <link rel="stylesheet" href="/css/style.css">
-    <title>Projects</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <title>{{title}}</title>
