--- a/views/partials/navbar.hbs
+++ b/views/partials/navbar.hbs
@@ -9,6 +9,6 @@
     <a class="py-2 d-none d-md-inline-block" href="#">About</a>
     <a class="py-2 {{#if navContact}} active {{/if}} d-none d-md-inline-block" href="/contact">Contact</a>
     <a class="py-2 d-none d-md-inline-block" href="#">Resume</a>
-    <a class="py-2 d-none d-md-inline-block" href="#">Admin</a>
+    <a class="py-2 d-none d-md-inline-block" href="/sign-in">Admin</a>
   </div>
 </nav>
